# poestat

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  generate.sh  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  gh-pages.yml  node.js.yml  release.yml
data/: all-mods.json  handlers.json  implied.json
pages/: bun.lockb  package.json  vite.config.ts
pages/.github/workflows/: gh-pages.yml
pages/src/: App.tsx  index.css
rs/: build_trie.rs  data.rs  handlers.rs  lib.rs  models.rs  parser.rs  result.rs
schema/: Cargo.toml  handlers.schema.json  stats.schema.json
schema/src/: main.rs  stats.rs
scripts/: build.ts  create-trie.ts  log.ts  test-data.ts  types.ts  write.ts
src/: App.tsx  index.ts  parse.ts  searchTrie.ts
src/types/: handlers.d.ts  index.d.ts  stats.d.ts
test/: parser.test.ts
tests/: parser.test.ts
ts/: index.ts  parse.ts  parser.ts  trie-builder.ts
ts/scripts/: test-data.ts  write.ts
ts/test/: parser.test.ts
ts/types/: handlers.d.ts  stats.d.ts
ts/types/rs/: ParseResult.ts  ParsedStat.ts
