workspace = { members = ["schema"] }
[package]
name = "poestat-wasm"
version = "0.1.0"
authors = ["ivy <lvlvllvlvllvlvl@users.noreply.github.com>"]
edition = "2018"

[dependencies]
phf = "0.11.2"
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
ts-rs = { version = "8.1.0", features = ["no-serde-warnings", "serde_json"] }
wasm-bindgen = "0.2.70"

[lib]
path = "rs/lib.rs"
crate-type =["cdylib", "lib"]
