[package]
name = "poestat-wasm"
version = "0.1.0"
authors = ["ivy <lvlvllvlvllvlvl@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "rs/lib.rs"
crate-type =["cdylib", "lib"]

[dependencies]
regex = "1.10.4"
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
ts-rs = { version = "8.1.0", features = ["no-serde-warnings", "serde_json"] }
tsify = { version = "0.4.5", features = ["js"] }
wasm-bindgen = "0.2.70"
poestat_static = { path = "../poestat_static" }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
